k8s-cd/base/product-service/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: product-service
  namespace: hoppingmall
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: product-service
  strategy:
    canary:
      canaryService: product-service-canary
      stableService: product-service
      trafficRouting:
        istio:
          virtualServices:
            - name: product-service-vsvc
              routes:
                - primary
          destinationRule:
            name: product-service-destrule
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 50
        - pause: {}
        - setWeight: 100
  template:
    metadata:
      labels:
        app: product-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: product-service
          image: product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
            - containerPort: 9093
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "384Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
