k8s-cd/base/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: hoppingmall
spec:
  selector:
    app: product-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: grpc
      port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-canary
  namespace: hoppingmall
spec:
  selector:
    app: product-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
    - name: grpc
      port: 9093
      targetPort: 9093
