k8s-cd/base/product-service/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product-service-dr
  namespace: hoppingmall
spec:
  host: product-service-stable
  subsets:
    - name: stable
      labels:
        app: product-service
    - name: canary
      labels:
        app: product-service
