k8s-cd/base/product-service/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-service-vsvc
  namespace: hoppingmall
spec:
  hosts:
    - product-service
  http:
    - name: primary
      route:
        - destination:
            host: product-service
            subset: stable
          weight: 100
        - destination:
            host: product-service
            subset: canary
          weight: 0
    - name: grpc
      match:
        - port: 9093
      route:
        - destination:
            host: product-service
            subset: stable
          weight: 100
        - destination:
            host: product-service
            subset: canary
          weight: 0
